--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "mongoose": "^8.13.2",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
